--- a/Leaflet-Part-2/static/css/style.css
+++ b/Leaflet-Part-2/static/css/style.css
@@ -1,10 +1,17 @@
-body {
-  padding: 0;
-  margin: 0;
+#map {
+  height: 80vh;
+  width: 100%;
 }
 
-#map,
-body,
-html {
-  height: 100%;
+.legend {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.legend i {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
 }
